--- a/style.css
+++ b/style.css
@@ -1,8 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+html,
+body {
+  font-family: 'Montserrat';
+  color: var(--text-black);
+}
+
+section,
+h1,
+h3,
+p,
+span,
+svg {
+  transition: background-color 0.5s, color 0.5s;
+}
+
+/* ---------------- Themes/Colors ---------------- */
+
+:root {
+  /* Light theme colors */
+  --color-text-light: #333332;
+  --color-background-light: #faf4e5;
+  /* --color-pink-light: #e5a1aa; */
+  --color-purple-light: #c8a1e5;
+  --color-green-light: #7ad0ac;
+  --color-blue-light: #8395cd;
+  /* Dark theme colors */
+  --color-text-dark: #faf4e5;
+  --color-background-dark: #8395cd;
+}
+
+.light-theme {
+  --color-text: var(--color-text-light);
+  --color-background: var(--color-background-light);
+  --color-blue: var(--color-blue-light);
+  --color-green: var(--color-green-light);
+  --color-purple: var(--color-purple-light);
+  --color-circle: var(--color-text-dark);
+}
+
+.dark-theme {
+  --color-text: var(--color-text-dark);
+  --color-background: var(--color-background-dark);
+  --color-blue: var(--color-text-dark);
+  --color-green: var(--color-text-dark);
+  --color-purple: var(--color-text-dark);
+  --color-circle: var(--color-text-dark);
+}
+
+/* ---------------- Experience ---------------- */
 
 .experience {
   position: fixed;
@@ -13,4 +65,250 @@
 .experience-canvas {
   width: 100%;
   height: 100%;
+}
+
+/* ---------------- Page content ---------------- */
+
+.page {
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.page-wrapper {
+  position: relative;
+}
+
+/* ---------------- Toggle bar ---------------- */
+
+.toggle-bar {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50px;
+  right: 50px;
+  z-index: 9999999;
+}
+
+.sun-wrapper,
+.moon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--color-text);
+}
+
+.toggle-button {
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 56px;
+  height: 28px;
+  background-color: var(--color-blue-light);
+  border-radius: 1000px;
+  margin: 0 16px;
+  border: none;
+  box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+}
+
+.toggle-circle {
+  position: absolute;
+  left: 6px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background-color: var(--color-circle);
+  transition: all 0.2 ease-in-out;
+}
+
+.toggle-button:hover .toggle-circle {
+  transform: scale(0.9);
+}
+
+.slide {
+  left: 30px;
+}
+
+/* ---------------- Section formatting ---------------- */
+
+.section-margin {
+  height: 3000px;
+  width: 100%;
+}
+
+.section {
+  width: 50%;
+  padding: 1000px 4%;
+  margin: 0;
+  background-color: var(--color-background);
+}
+
+.left {
+  margin-right: auto;
+}
+
+.right {
+  margin-left: auto;
+}
+
+.section-intro-wrapper {
+  position: relative;
+  padding: 20% 5%;
+  border-bottom: 2px solid var(--color-text);
+  padding-bottom: 400px;
+}
+
+.section-detail-wrapper {
+  position: relative;
+  padding: 20% 5%;
+}
+
+.section-heading {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.8;
+  margin-top: 64px;
+  color: var(--color-text);
+}
+
+.section-text {
+  line-height: 2;
+  margin-top: 18px;
+  font-size: 16px;
+  color: var(--color-text);
+}
+
+/* ---------------- Section decoration ---------------- */
+
+.section-title {
+  position: relative;
+  color: var(--color-blue-light);
+}
+
+.section-title-text {
+  display: block;
+  font-size: 40px;
+  font-weight: 500;
+  transform-origin: left;
+  transform: skewY(25deg);
+  z-index: 5;
+  text-transform: uppercase;
+  color: var(--color-text);
+}
+
+.section-number {
+  position: absolute;
+  bottom: 15px;
+  right: 0;
+  color: var(--color-text);
+  font-size: 24px;
+}
+
+.styleOne,
+.styleTwo,
+.styleThree {
+  position: absolute;
+  display: block;
+  width: 100%;
+  max-width: 280px;
+  height: 60px;
+  border: 1px solid var(--color-text);
+  transform-origin: left;
+  transform: skewY(-25deg);
+}
+
+.styleOne {
+  top: 0;
+}
+
+.styleTwo {
+  top: 80px;
+}
+
+.styleThree {
+  top: 80px;
+  transform: skewY(25deg);
+  background-color: var(--color-text);
+}
+
+/* ---------------- Hero section ---------------- */
+
+.hero {
+  width: 100vw;
+  height: 100vh;
+}
+
+.hero-wrapper {
+  position: relative;
+  height: 100%;
+  width: calc(100% - 100px);
+  margin: 0 auto;
+  max-width: 1100px;
+}
+
+.hero-main {
+  position: absolute;
+  bottom: 100px;
+  left: 0;
+}
+
+.hero-second {
+  position: absolute;
+  top: calc(30% - 120px);
+  right: 0;
+  color: var(--color-text);
+}
+
+.hero-main-title {
+  font-size: 40px;
+  color: var(--color-text);
+}
+
+.hero-main-description {
+  font-size: 15px;
+  color: var(--color-text);
+}
+
+.hero-second-subheading {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: var(--color-text);
+}
+
+/* ---------------- Override colors ---------------- */
+
+.purple-text {
+  color: var(--color-purple);
+}
+
+.purple-border {
+  border-color: var(--color-purple);
+}
+
+.purple-background {
+  background-color: var(--color-purple);
+}
+
+.green-text {
+  color: var(--color-green);
+}
+
+.green-border {
+  border-color: var(--color-green);
+}
+
+.green-background {
+  background-color: var(--color-green);
+}
+
+/* Media queries */
+
+@media (max-width: 968px) {
+  .section {
+    width: 100%;
+  }
 }
