--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ svg {
 .section-intro-wrapper {
   position: relative;
   padding: 20% 5%;
-  border-bottom: 2px solid var(--color-text);
+  border-bottom: 2px solid var(--color-blue);
   padding-bottom: 400px;
 }
 
@@ -186,7 +186,7 @@ svg {
 
 .section-title {
   position: relative;
-  color: var(--color-blue-light);
+  color: var(--color-blue);
 }
 
 .section-title-text {
@@ -197,14 +197,14 @@ svg {
   transform: skewY(25deg);
   z-index: 5;
   text-transform: uppercase;
-  color: var(--color-text);
+  color: var(--color-blue);
 }
 
 .section-number {
   position: absolute;
   bottom: 15px;
   right: 0;
-  color: var(--color-text);
+  color: var(--color-blue);
   font-size: 24px;
 }
 
@@ -216,7 +216,7 @@ svg {
   width: 100%;
   max-width: 280px;
   height: 60px;
-  border: 1px solid var(--color-text);
+  border: 1px solid var(--color-blue);
   transform-origin: left;
   transform: skewY(-25deg);
 }
@@ -232,7 +232,7 @@ svg {
 .styleThree {
   top: 80px;
   transform: skewY(25deg);
-  background-color: var(--color-text);
+  background-color: var(--color-blue);
 }
 
 /* ---------------- Hero section ---------------- */
