--- a/style.css
+++ b/style.css
@@ -149,10 +149,14 @@ svg {
 
 .left {
   margin-right: auto;
+  border-top-right-radius: 700px 700px;
+  border-bottom-right-radius: 0 0;
 }
 
 .right {
   margin-left: auto;
+  border-top-left-radius: 700px 700px;
+  border-bottom-left-radius: 0 0;
 }
 
 .section-intro-wrapper {
